# cn-2024-dynamic-b-suitor-experiments

./: .gitignore  CMakeLists.txt  Evaluation.ipynb  convert_to_json.py  convert_to_mtx.py  download_graph_files.py  experiments.yml  generate_random_graph.py  graphs.txt  main.cpp  plot_results.py  process_results.py  transform_weights.py
output/dynamic-b-suitor~1_op=insert,2_batch_s=10e0,3_b_val=10@comparison/: africa.out  africa.status  asia.out  asia.status  austria.out  austria.status  belgium.out  belgium.status  bone010.out  bone010.status  cage14.out  cage14.status  cage15.out  cage15.status  com-youtube.out  com-youtube.status  flickr-growth.out  flickr-growth.status  france.out  france.status  human_gene2.out  human_gene2.status  hyp-24-1.out  hyp-24-1.status  mouse_gene.out  mouse_gene.status  orkut-links.out  orkut-links.status  petster-catdog-friend.out  petster-catdog-friend.status  poland.out  poland.status  rmat-b.out  rmat-b.status  rmat-er.out  rmat-er.status  rmat-g.out  rmat-g.status  soc-LiveJournal1.out  soc-LiveJournal1.status
output/dynamic-b-suitor~1_op=insert,2_batch_s=10e0,3_b_val=1@comparison/: africa.out  africa.status  asia.out  asia.status  austria.out  austria.status  belgium.out  belgium.status  bone010.out  bone010.status  cage14.out  cage14.status  cage15.out  cage15.status  com-youtube.out  com-youtube.status  flickr-growth.out  flickr-growth.status  france.out  france.status  human_gene2.out  human_gene2.status  hyp-24-1.out  hyp-24-1.status  mouse_gene.out  mouse_gene.status  orkut-links.out  orkut-links.status  poland.out  rmat-b.out  (+10 more)
(+1900 files in other folders)
